[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Ball.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/models/blocks.meshlib" type="MeshLibrary" id=2]
[ext_resource path="res://Environment/DeathZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Environment/VictoryZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Environment/Level.gd" type="Script" id=5]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 1
background_sky = SubResource( 1 )
background_color = Color( 0.168627, 0.47451, 0.678431, 1 )
ambient_light_color = Color( 0.117647, 0.67451, 0.945098, 1 )
fog_enabled = true
fog_color = Color( 0.403922, 0.572549, 0.741176, 1 )
fog_depth_begin = 0.0
tonemap_mode = 3
ssao_intensity = 3.0
ssao_light_affect = 1.0
ssao_quality = 2
dof_blur_far_distance = 33.42
dof_blur_far_amount = 0.07
dof_blur_far_quality = 2
adjustment_enabled = true
adjustment_brightness = 0.75
adjustment_contrast = 1.5
adjustment_saturation = 1.2

[node name="Level01" type="Spatial"]
script = ExtResource( 5 )

[node name="Ball" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 6 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 2 )
cell_size = Vector3( 4, 4, 4 )
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 2, 65535, 0, 1048578, 0, 1, 0, 1, 1, 1, 65535, 1, 655361, 0, 2, 1441793, 1, 2, 1441794, 65535, 2, 655362, 65536, 65526, 0, 65537, 65526, 0, 131071, 65526, 0, 65536, 65527, 5, 65537, 65527, 0, 131071, 65527, 0, 65536, 65528, 0, 65537, 65528, 0, 131071, 65528, 0, 65536, 65530, 0, 65537, 65530, 0, 131071, 65530, 0, 65536, 65531, 0, 65537, 65531, 0, 131071, 65531, 0, 65536, 65532, 0, 0, 65533, 4, 0, 65534, 0, 0, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.5, -0.75, 0.433013, -3.78552e-08, 0.5, 0.866025, -0.866025, -0.433013, 0.25, 0, 8, 0 )
light_color = Color( 0.972549, 0.901961, 0.803922, 1 )
light_energy = 2.0
shadow_enabled = true

[node name="DeathZone" parent="." instance=ExtResource( 3 )]

[node name="VictoryZone" parent="." instance=ExtResource( 4 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )
[connection signal="body_entered" from="DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="body_entered" from="VictoryZone" to="." method="_on_VictoryZone_body_entered"]
